# StarLex

./: CONTRIBUTING.md  MANIFEST.in  README.md  __init__.ipynb  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
starlex/: __init__.py
starlex/star/: __init__.py  _init_.py
