[metadata]
name = starlex
author = STAC IIT Mandi
author_email = stac.iitmandi@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/STAC-IITMandi/StarLex
description = Modelling Stellar Evolution
long_description = file: README.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
setup_requires = setuptools_scm
install_requires =
  numpy
  sympy
  vpython



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
starlex = data/*

[tool:pytest]
testpaths = "starlex" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  starlex/__init*
  starlex/conftest.py
  starlex/*setup_package*
  starlex/tests/*
  starlex/*/tests/*
  starlex/extern/*
  starlex/version*
  */starlex/__init*
  */starlex/conftest.py
  */starlex/*setup_package*
  */starlex/tests/*
  */starlex/*/tests/*
  */starlex/extern/*
  */starlex/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
